[package]
name = "lau-intention-field"
version = "0.1.0"
edition = "2021"
description = "Intention field — a vector field over agent space where each point has an intention vector"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-intention-field"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
